# dissenter

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  benchmark-plan.md  dissent-test.toml  dissent.toml  dissenter-test.toml  dissenter.example.toml  dissenter.toml  dissenter_20260326_210331.toml  pyproject.toml
.github/workflows/: publish.yml
configs/: README.md  bench-ministral-baseline.toml
datasets/: README.md  test-mini.jsonl
paper/: RESEARCH-GUIDE.md  WRITERS-GUIDE.md  paper.md
scripts/: analyze_results.py  fetch_datasets.py
src/dissent/: cli.py  config.py  detect.py  runner.py  synthesis.py  wizard.py
src/dissent/roles/: contrarian.toml  devils_advocate.toml  liberal.toml
src/dissenter/: cli.py  config.py  db.py  detect.py  generate.py  paths.py  roles.py  runner.py  synthesis.py  update.py  validate.py  wizard.py
src/dissenter/benchmark/: __init__.py  baselines.py  code_eval.py  datasets.py  parser.py  prompts.py  results.py  runner.py
src/dissenter/benchmark/competitors/: __init__.py  base.py  consilium.py  llm_consortium.py  llm_council.py
src/dissenter/roles/: analyst.toml  chairman.toml  conservative.toml  pragmatist.toml  researcher.toml  second_opinion.toml  skeptic.toml
src/dissenter/tui/: __init__.py  __main__.py  app.py  app.tcss
src/dissenter/tui/screens/: benchmark.py  debate.py
src/dissenter/tui/widgets/: ask_form.py  benchmark_form.py  config_builder.py  config_tree.py  configs_list.py  decision_viewer.py  generate_form.py  history_table.py  models_panel.py  sidebar.py
tests/: test_config.py  test_db.py  test_generate.py  test_integration.py  test_preflight.py  test_roles.py  test_runner.py  test_synthesis.py  test_validate.py
