[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dissent"
version = "1.0.0"
description = "Multi-LLM debate engine for architectural decisions"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.62.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "platformdirs>=4.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
dissent = "dissent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dissent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
