[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dissenter"
dynamic = ["version"]
description = "Multi-LLM debate engine for complex questions — surface disagreement, synthesize decisions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dr. Tyler T. Procko", email = "prockotyler@gmail.com" }]
requires-python = ">=3.11"
keywords = ["llm", "ai", "debate", "ensemble", "architecture", "decision", "adr", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm>=1.62.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "platformdirs>=4.3.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/PR0CK0/dissenter"
Repository = "https://github.com/PR0CK0/dissenter"
"Bug Tracker" = "https://github.com/PR0CK0/dissenter/issues"
Changelog = "https://github.com/PR0CK0/dissenter/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
dissenter = "dissent.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dissent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
